# SimCycle

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: run_simulation.py
examples/data/: demo_primers.csv
examples/outputs/: example_products.csv
lamprey/: __init__.py  datamodel.py  emergent.py  model_unified.py  molecule_pool.py  parameters.py  sites.py  thermo.py  utils.py
lamprey/segmentation/: __init__.py  segmenter.py
tests/: test_smoke.py
tools/: __init__.py  _common.py  load_primers.py  plot_amplification.py  plot_autocat_network.py  plot_lineage.py  plot_product_summary.py  plot_segmentation.py
