[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lamprey"
version = "0.1.0"
description = "Mechanistic Gillespie-SSA simulator of template-free (spurious) LAMP amplification"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Mark Knappenberger" },
    { name = "Karen S. Anderson" },
]
keywords = ["LAMP", "isothermal amplification", "Gillespie", "SSA", "kinetics", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.4", "networkx>=2.6"]
dev = ["pytest>=7.0", "matplotlib>=3.4", "networkx>=2.6"]

[tool.setuptools.packages.find]
include = ["lamprey*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
